<resources>
    <string name="app_name">QuizApp</string>
    <string name="welcome">Welcome</string>
    <string name="enterName">Please enter your name.</string>
    <string name="quizApp">QuizApp</string>
    <string name="start">START</string>
    <string name="name">Name</string>
    <string name="hello">Hello,&#160;</string>
    <string name="exclamation">!</string>
    <string name="pleaseSelect">Please select a quiz from below.</string>
</resources>