<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activity_main_background"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="parent"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/tvQuizApp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textAlignment="center"
            android:text="@string/quizApp"
            android:textStyle="bold"
            android:textSize="22sp"
            android:textColor="@color/white"
            >
        </TextView>
        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <TextView
                    android:id="@+id/tvWelcome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/tvEnterName"
                    >
                </TextView>
                <TextView
                    android:id="@+id/tvEnterName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enterName"
                    android:textSize="13sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="18dp"
                    app:layout_constraintTop_toBottomOf="@id/tvWelcome"
                    app:layout_constraintBottom_toTopOf="@id/textInputField"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                </TextView>
                <EditText
                    android:id="@+id/textInputField"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:hint="@string/name"
                    android:textColorHint="@color/grey"
                    android:background="@drawable/edit_text_shape_rounded_corners"
                    android:layout_marginRight="18dp"
                    android:layout_marginLeft="18dp"
                    android:layout_marginBottom="10dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:autofillHints="false"
                    android:inputType="text"
                    app:layout_constraintTop_toBottomOf="@id/tvEnterName"
                    app:layout_constraintBottom_toTopOf="@id/startButton"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                </EditText>

                <Button
                    android:id="@+id/startButton"
                    android:layout_width="match_parent"
                    android:layout_height="58dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginBottom="13dp"
                    android:text="@string/start"
                    android:textColor="@color/white"
                    android:background="@drawable/button_shape_gradient"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    app:layout_constraintTop_toBottomOf="@id/textInputField"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent">

                </Button>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>